# wishlist

./: config.py  main.py  pyproject.toml
app/: config.py  database.py  db_controller.py  main.py  markups.py  model.py  utils.py  view.py
app/controllers/: controller.py  db_con.py
app/models/: database.py  model.py  schemas.py
